force-app/main/default/objects/AIConversation__c/AIConversation__c.object-meta.xml
<CustomObject>
    <description>Represents a single chat session between a user and an AI Agent, scoped to a specific record. Stores session-level state, usage, and outcome data used for reporting, cost tracking, and enforcing the Agent&apos;s configured limits and retention rules.</description>
    <label>AI Conversation</label>
    <nameField>
        <displayFormat>AI Conversation - {000000}</displayFormat>
        <label>AI Conversation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>💬 AI Conversations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>