force-app/main/default/objects/AIConversation__c/fields/AIAgent__c.field-meta.xml
<CustomField>
    <fullName>AIAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Agent handling this conversation.</description>
    <inlineHelpText>Set automatically when the conversation starts, based on which Agent matched the record it was opened from.</inlineHelpText>
    <label>AI Agent</label>
    <referenceTo>AIAgent__c</referenceTo>
    <relationshipLabel>AI Conversations</relationshipLabel>
    <relationshipName>AIConversations</relationshipName>
    <type>Lookup</type>
</CustomField>