force-app/main/default/objects/AIConversation__c/fields/AIPromptTemplate__c.field-meta.xml
<CustomField>
    <fullName>AIPromptTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Prompt Template that was selected for this conversation.</description>
    <inlineHelpText>Set automatically when the conversation starts, based on which template&apos;s Activation Criteria matched the record at that time.</inlineHelpText>
    <label>AI Prompt Template</label>
    <referenceTo>AIPromptTemplate__c</referenceTo>
    <relationshipLabel>AI Conversations</relationshipLabel>
    <relationshipName>AIConversations</relationshipName>
    <type>Lookup</type>
</CustomField>