force-app/main/default/objects/AIConversation__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Where this conversation took place.</description>
    <inlineHelpText>Records which surface the user was using, useful for usage reporting across different entry points.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Page Chat</fullName>
            </value>
            <value>
                <fullName>Utility Bar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>