force-app/main/default/objects/AIConversation__c/fields/ConversationClosedTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ConversationClosedTimestamp__c</fullName>
    <description>The date and time this conversation ended, whether closed by the user, an idle timeout, or a message or token limit being reached.</description>
    <inlineHelpText>Set automatically when the conversation ends. Left blank while the conversation is still active.</inlineHelpText>
    <label>Conversation Closed Timestamp</label>
    <type>DateTime</type>
</CustomField>