force-app/main/default/objects/AIConversation__c/fields/ConversationCloseReason__c.field-meta.xml
<CustomField>
    <fullName>ConversationCloseReason__c</fullName>
    <description>The reason this conversation was closed, used for reporting on how sessions typically end.</description>
    <inlineHelpText>Set automatically based on what triggered the conversation to close. Useful for spotting whether limits are being hit too often.</inlineHelpText>
    <label>Conversation Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Closed</fullName>
            </value>
            <value>
                <fullName>Idle Timeout</fullName>
            </value>
            <value>
                <fullName>Message Limit Reached</fullName>
            </value>
            <value>
                <fullName>Token Limit Reached</fullName>
            </value>
            <value>
                <fullName>System Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>