force-app/main/default/objects/AIConversation__c/fields/ConversationTokenUsage__c.field-meta.xml
<CustomField>
    <fullName>ConversationTokenUsage__c</fullName>
    <description>The running total of tokens consumed across this conversation.</description>
    <inlineHelpText>Updated as the conversation progresses and checked against the Agent&apos;s Max Tokens Per Conversation limit.</inlineHelpText>
    <label>Conversation Token Usage</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>