force-app/main/default/objects/AIConversation__c/fields/ExternalReference__c.field-meta.xml
<CustomField>
    <fullName>ExternalReference__c</fullName>
    <description>A stable identifier for this conversation used by external systems to reference it without relying on the Salesforce record Id.</description>
    <externalId>true</externalId>
    <inlineHelpText>Set this if another system needs to reference this conversation directly, such as a logging platform or an external analytics tool. Keep it stable - changing it will break existing references.</inlineHelpText>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>