force-app/main/default/objects/AIConversation__c/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this conversation has passed its retention period and been archived.</description>
    <inlineHelpText>Set automatically once the Retention Expiry Date has passed, per the Agent&apos;s Retention Action setting.</inlineHelpText>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>