force-app/main/default/objects/AIConversation__c/fields/MessageCount__c.field-meta.xml
<CustomField>
    <fullName>MessageCount__c</fullName>
    <description>The total number of messages exchanged in this conversation, calculated automatically from its child messages.</description>
    <inlineHelpText>Automatically maintained via the master-detail relationship. Checked against the Agent&apos;s Max Messages Per Conversation limit.</inlineHelpText>
    <label>Message Count</label>
    <summaryForeignKey>AIConversationMessage__c.AIConversation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>