force-app/main/default/objects/AIConversation__c/fields/ProcessingLockedUntil__c.field-meta.xml
<CustomField>
    <fullName>ProcessingLockedUntil__c</fullName>
    <description>Set while an AI response is being generated for this conversation, so only one message is processed at a time. Cleared by AiMessageProcessingFinalizer when the turn ends. A value in the past is treated as unlocked, so a lock can never be held forever.</description>
    <inlineHelpText>Managed automatically. Blank or in the past means the conversation is free to process its next message.</inlineHelpText>
    <label>Processing Locked Until</label>
    <type>DateTime</type>
</CustomField>