force-app/main/default/objects/AIConversation__c/fields/RelatedObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectAPIName__c</fullName>
    <description>The API name of the object this conversation is scoped to.</description>
    <inlineHelpText>Populated automatically based on the record the conversation was started from.</inlineHelpText>
    <label>Related Object API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>