force-app/main/default/objects/AIConversation__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>The Id of the specific record this conversation is scoped to.</description>
    <inlineHelpText>Populated automatically based on the record the conversation was started from.</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>