force-app/main/default/objects/AIConversation__c/fields/RetentionCalculationBasis__c.field-meta.xml
<CustomField>
    <fullName>RetentionCalculationBasis__c</fullName>
    <description>Which date RetentionExpiryDate__c was actually calculated from on this record.</description>
    <inlineHelpText>Set automatically when Retention Expiry Date is calculated, so later changes to the Agent&apos;s Retention Trigger don&apos;t make it unclear how this record&apos;s date was derived.</inlineHelpText>
    <label>Retention Calculation Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conversation Created Date</fullName>
            </value>
            <value>
                <fullName>Conversation Closed Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>