force-app/main/default/objects/AIConversation__c/fields/RetentionExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>RetentionExpiryDate__c</fullName>
    <description>The date this conversation becomes eligible for deletion, calculated from the Agent&apos;s retention settings.</description>
    <inlineHelpText>Calculated automatically based on the Agent&apos;s Conversation Retention Days and Retention Trigger settings.</inlineHelpText>
    <label>Retention Expiry Date</label>
    <type>Date</type>
</CustomField>