force-app/main/default/objects/AIConversation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AIAgent__c</columns>
    <columns>Status__c</columns>
    <columns>Channel__c</columns>
    <columns>MessageCount__c</columns>
    <columns>ConversationTokenUsage__c</columns>
    <columns>RelatedObjectAPIName__c</columns>
    <columns>RelatedRecordId__c</columns>
    <columns>RetentionExpiryDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>